AX: content-visibility change from hidden to visible ignored by VoiceOver https://bugs.webkit.org/show_bug.cgi?id=292380 rdar://150453039

Reviewed by Chris Fleizach.

While changes to the `visibility` property result in children-changed notifications from the render tree, changes to
`content-visibility` do not. We can hook into `AXObjectCache::onStyleChange` to listen for these, and then create
a children-changed event.

* LayoutTests/accessibility/dynamic-content-visibility-expected.txt: Added.
* LayoutTests/accessibility/dynamic-content-visibility.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::isContentVisibilityHidden):
(WebCore::AXObjectCache::onStyleChange):
(WebCore::isVisibilityHidden):

Canonical link: https://commits.webkit.org/294420@main